--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -104,17 +104,14 @@
             <li data-name="home" class="layui-nav-item">
               <a href="javascript:;" lay-tips="主页" lay-direction="2">
                 <i class="layui-icon layui-icon-home"></i>
-                <cite>主页</cite>
+                <cite>寒衣管理</cite>
               </a>
               <dl class="layui-nav-child">
                 <dd data-name="console">
-                  <a lay-href="/console">控制台</a>
+                  <a lay-href="/console">寒衣列表</a>
                 </dd>
                 <dd data-name="console">
-                  <a lay-href="home/homepage1.html">主页一</a>
-                </dd>
-                <dd data-name="console">
-                  <a lay-href="home/homepage2.html">主页二</a>
+                  <a lay-href="/clothAdd">寒衣添加</a>
                 </dd>
               </dl>
             </li>
