--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -108,7 +108,7 @@
               </a>
               <dl class="layui-nav-child">
                 <dd data-name="console">
-                  <a lay-href="/console">寒衣列表</a>
+                  <a lay-href="/productList">寒衣列表</a>
                 </dd>
                 <dd data-name="console">
                   <a lay-href="/clothAdd">寒衣添加</a>
